--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,23 +2,34 @@ SET(PROJECT_NAME open_quadtree_mapping)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)
 PROJECT(${PROJECT_NAME})
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules/")
+
+option(WITH_ROS "Compile with ROS wrapper" True)
+
 SET(CMAKE_BUILD_TYPE Release) # Release, RelWithDebInfo
 
-find_package(CUDA REQUIRED)
-SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 -use_fast_math)
+enable_language(CUDA) 
+# find_package(CUDA REQUIRED)
+# SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 -use_fast_math)
 
 # Specify compute capability
-list(APPEND CUDA_NVCC_FLAGS -arch=sm_61)
-list(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_61,code=sm_61)
+# list(APPEND CUDA_NVCC_FLAGS -arch=sm_61)
+# list(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_61,code=sm_61)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-Xcompiler;-fPIC;" -std=c++11)
+set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CUDA_FLAGS_DEBUG} -G -g")
 
-SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
+#SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+IF(CMAKE_COMPILER_IS_GNUCC)
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+ELSE()
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+ENDIF()
 
 find_package(OpenCV REQUIRED)
-find_package(Eigen REQUIRED)
+find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system filesystem)
-
+if(WITH_ROS)
 find_package(catkin REQUIRED COMPONENTS
   roscpp roslib cmake_modules cv_bridge image_transport pcl_ros sensor_msgs geometry_msgs)
 catkin_package(
@@ -27,12 +38,17 @@ catkin_package(
     INCLUDE_DIRS include
     # LIBRARIES efficient_map efficient_map_cuda
 )
+endif()
 
+if(WIN32)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_USE_MATH_DEFINES")
+endif()
 
 include_directories(
   include
   ${OpenCV_INCLUDE_DIRS}
-  ${Eigen_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
+  ${EIGEN_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
 )
 
@@ -45,13 +61,39 @@ list(APPEND LINK_LIBS
 include_directories(${catkin_INCLUDE_DIRS})
 list(APPEND LINK_LIBS ${catkin_LIBRARIES})
 
-cuda_add_executable(open_quadtree_mapping_node
+add_library(open_quadtree_mapping_lib STATIC
     src/check_cuda_device.cu
     src/seed_matrix.cu
+    # src/bpextract.cu
+    # src/depth_extract.cu
+    # src/depth_fusion.cu
+    # src/depth_upsample.cu
+    # src/lsd_semidense.cu
+    # src/quadtree.cu
+    # src/seed_init.cu
     src/depthmap.cpp
+    )
+
+add_executable(open_quadtree_mapping_node
     src/depthmap_node.cpp
     src/publisher.cpp
     src/main_ros.cpp
     )
-target_link_libraries(open_quadtree_mapping_node
+target_link_libraries(open_quadtree_mapping_node open_quadtree_mapping_lib
 ${catkin_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES})
+
+add_executable(open_quadtree_mapping_standalone
+    src/main_standalone.cpp
+    )
+target_link_libraries(open_quadtree_mapping_standalone open_quadtree_mapping_lib
+${catkin_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES})
+
+# Python module
+include_directories( ${EIGEN3_INCLUDE_DIRS} )
+
+#add_subdirectory(pybind11)
+find_package(pybind11)
+include_directories( ${pybind11_INCLUDE_DIRS} )
+link_libraries( ${pybind11_LIBRARIES} )
+pybind11_add_module(pyQuadtreeMapping src/python_wrapper.cpp)
+TARGET_LINK_LIBRARIES(pyQuadtreeMapping PRIVATE open_quadtree_mapping_lib ${OpenCV_LIBS} ${Boost_LIBRARIES})
