Fixes for build under ubuntu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,41 +7,41 @@ option(WITH_ROS "Compile with ROS wrapper" True)
 
 SET(CMAKE_BUILD_TYPE Release) # Release, RelWithDebInfo
 
-enable_language(CUDA) 
+enable_language(CUDA)
+include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
 # find_package(CUDA REQUIRED)
 # SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-O3 -use_fast_math)
 
 # Specify compute capability
 # list(APPEND CUDA_NVCC_FLAGS -arch=sm_61)
 # list(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_61,code=sm_61)
-set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-Xcompiler;-fPIC;" -std=c++11)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-Xcompiler;-fPIC;-std=c++11")
 set(CMAKE_CUDA_FLAGS_DEBUG "${CMAKE_CUDA_FLAGS_DEBUG} -G -g")
 
 #SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
-IF(CMAKE_COMPILER_IS_GNUCC)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-ELSE()
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-ENDIF()
+#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CUDA_STANDARD 11)
 
 find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system filesystem)
 if(WITH_ROS)
-find_package(catkin REQUIRED COMPONENTS
-  roscpp roslib cmake_modules cv_bridge image_transport pcl_ros sensor_msgs geometry_msgs)
-catkin_package(
-    DEPENDS OpenCV Eigen Boost
-    CATKIN_DEPENDS roscpp roslib image_transport pcl_ros
-    INCLUDE_DIRS include
-    # LIBRARIES efficient_map efficient_map_cuda
-)
+  find_package(catkin REQUIRED COMPONENTS
+    roscpp roslib cmake_modules cv_bridge image_transport pcl_ros sensor_msgs geometry_msgs)
+  catkin_package(
+      DEPENDS OpenCV Eigen Boost
+      CATKIN_DEPENDS roscpp roslib image_transport pcl_ros
+      INCLUDE_DIRS include
+      # LIBRARIES efficient_map efficient_map_cuda
+  )
 endif()
 
 if(WIN32)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_USE_MATH_DEFINES")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_USE_MATH_DEFINES")
+else()
+  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 endif()
 
 include_directories(
@@ -72,19 +72,19 @@ add_library(open_quadtree_mapping_lib STATIC
     # src/quadtree.cu
     # src/seed_init.cu
     src/depthmap.cpp
-    )
+)
 
 add_executable(open_quadtree_mapping_node
     src/depthmap_node.cpp
     src/publisher.cpp
     src/main_ros.cpp
-    )
+)
 target_link_libraries(open_quadtree_mapping_node open_quadtree_mapping_lib
 ${catkin_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES})
 
 add_executable(open_quadtree_mapping_standalone
     src/main_standalone.cpp
-    )
+)
 target_link_libraries(open_quadtree_mapping_standalone open_quadtree_mapping_lib
 ${catkin_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES})
 
